--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ branch = "serde"
 # Examples
 [[example]]
 name = "box_game_p2p"
-path = "src/box_game_p2p.rs"
+path = "src/box_game/p2p.rs"
 
 [[example]]
 name = "box_game_spectator"
-path = "src/box_game_spectator.rs"
+path = "src/box_game/spectator.rs"
